Fixing layout issue

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -74,20 +74,24 @@ h2
   text-align: center
 
 // Output
+
+@mixin output
+  padding: 30px
+  background-color: $grey
+  border: 1px solid $black
+
+
 .output-visible
+  @include output
   display: block
   width: 80%
   margin: 20px auto
-  padding: 30px
-  border: 1px solid $black
-  background-color: $grey
 
 .output
   .box
+    @include output
     width: 80%
     margin: 0 auto 10px
-    padding: 20px
-    border: 1px solid $black
 
   p
     &:first-child
